# IzzyEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SConstruct.py  buildrun.sh  run.sh
firstparty/CWE/: SConscript.py
firstparty/CWE/include/CWE/: cwmath.h  cwstring.h  logger.h  vec.h
firstparty/CWE/src/: cwmath.c  cwstring.c  logger.c
resources/: spriteshader.glsl
src/: SConscript.py  context.h  fragmentshader.glsl  main.c  spriteshader.glsl  vertexshader.glsl
src/CWE/: cwmath.c  cwmath.h  cwstring.c  logger.c  logger.h  vec.h
src/Collections/: base_rendering.h  libraries.h
src/Events/: events.h
src/Physics/: collisions.c  collisions.h  physics.c  physics.h
src/characters/: characters.c  characters.h
src/meshes/: meshes.c  meshes.h
src/shaders/: shaders.c  shaders.h
src/textures/: textures.c  textures.h
